--- a/source/pages/malldetail/malldetail.wxml
+++ b/source/pages/malldetail/malldetail.wxml
@@ -116,9 +116,9 @@
     <view class="test_main">
         <view style="color: #333333;margin-left: 10px;font-weight:500;font-size:16px;">规格</view>
         <view class="guige">
-            <!-- 渲染 -->
-            <view class="one_guige  {{norms == index+1?'one_guige1':'one_guige' }}" data-id="{{item.id}}" bindtap="getnorms"  wx:for="{{info.guige}}" k> 
-                {{item.specifications}}
+            <!-- 渲染 -->   
+            <view class="one_guige  {{norms == item.id?'one_guige1':'one_guige' }}" data-id="{{item.id}}" bindtap="getnorms"  wx:for="{{info.guige}}"> 
+                {{item.name}}
             </view>
 
         </view>
