--- a/source/pages/ordersubmit/ordersubmit.wxml
+++ b/source/pages/ordersubmit/ordersubmit.wxml
@@ -1,143 +1,174 @@
 <view class="flex-row flex-center sendbox">
-    <view class="{{sendtype=='A'?'sendactive':'txt-44'}} h6" bindtap="swtichsend" id='A'>商家配送</view>
-    <view class="{{sendtype=='B'?'sendactive':'txt-44'}} h6" bindtap="swtichsend" id='B'>到店自提</view>
+  <view class="{{sendtype=='A'?'sendactive':'txt-44'}} h6" bindtap="swtichsend" id='A'>商家配送</view>
+  <view class="{{sendtype=='B'?'sendactive':'txt-44'}} h6" bindtap="swtichsend" id='B'>到店自提</view>
 </view>
 
 <view>
-<!-- 商家配送 -->
-    <view wx:if="{{sendtype=='A'}}">
+  <!-- 商家配送 -->
+  <view wx:if="{{sendtype=='A'}}">
     <!-- 没有选地址的话，转跳到地址列表 -->
-        <view wx:if="{{address_id==0}}" class="flex-row flex-center dizhibox" bindtap="navigateto" id='/pages/addresslist/addresslist?chosetype=A&id={{address_id}}'>
-            <!-- 展示的内容 -->
-            <image src="{{uploadpath}}resource/{{res.dizhi}}" class="dizhi"></image>
-            <view class="f-36 txt-33">点击选择地址</view>
-            <view class="flex-1"></view>
-            <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
-        </view>
-        <!-- 否则，点击也转跳到地址列表 -->
-        <view wx:else class="flex-row flex-center dizhibox" bindtap="navigateto" id='/pages/addresslist/addresslist?chosetype=A&id={{address_id}}'>
-            <view class="flex-1 flex-row">
-            <!-- 展示内容 -->
-                <image src="{{uploadpath}}resource/{{res.dizhi}}" class="dizhi"></image>
-                <view>
-                    <view class="f-36 txt-33" style="font-weight: 500;">{{addressinfo.address}}</view>
+    <view wx:if="{{address_id==0}}" class="flex-row flex-center dizhibox" bindtap="navigateto" id='/pages/addresslist/addresslist?chosetype=A&id={{address_id}}'>
+      <!-- 展示的内容 -->
+      <image src="{{uploadpath}}resource/{{res.dizhi}}" class="dizhi"></image>
+      <view class="f-36 txt-33">点击选择地址</view>
+      <view class="flex-1"></view>
+      <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
+    </view>
+    <!-- 否则，点击也转跳到地址列表 -->
+    <view wx:else class="flex-row flex-center dizhibox" bindtap="navigateto" id='/pages/addresslist/addresslist?chosetype=A&id={{address_id}}'>
+      <view class="flex-1 flex-row">
+        <!-- 展示内容 -->
+        <image src="{{uploadpath}}resource/{{res.dizhi}}" class="dizhi"></image>
+        <view>
+          <view class="f-36 txt-33" style="font-weight: 500;">{{addressinfo.address}}</view>
 
-                    <view class="flex-row flex-center">
-                        <view class="txt-99 h5">{{addressinfo.name}}</view>
-                        <view class="txt-99 h5 margin-left-10">{{addressinfo.mobile}}</view>
-                    </view>
-                </view>
-            </view>
-            <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
+          <view class="flex-row flex-center">
+            <view class="txt-99 h5">{{addressinfo.name}}</view>
+            <view class="txt-99 h5 margin-left-10">{{addressinfo.mobile}}</view>
+          </view>
         </view>
-
+      </view>
+      <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
     </view>
 
-    <!-- 自提 -->
-    <view wx:else>
-        <view wx:if="{{store_id==0}}" class="flex-row flex-center dizhibox" bindtap="navigateto" id='/pages/store/store?goodsid={{info.id}}&id={{store_id}}'>
-            <image src="{{uploadpath}}resource/{{res.dizhi}}" class="dizhi"></image>
-            <view class="f-36 txt-33">点击选择地址</view>
-            <view class="flex-1"></view>
-            <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
-        </view>
-        <view wx:else class="flex-row flex-center dizhibox" bindtap="navigateto" id='/pages/store/store?goodsid={{info.id}}&id={{store_id}}'>
-            <view class="flex-1 ">
-                <view>
-                    <view class="flex-row flex-center">
-                        <view class="ziti">自提</view>
-                        <view class="f-36 txt-33" style="font-weight: 500;">{{storeinfo.name}}</view>
-                    </view>
+  </view>
 
-                    <view class="flex-row flex-center">
-                        <view class="txt-66 h5">{{storeinfo.address}}</view>
-                    </view>
-                </view>
-            </view>
-            <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
-        </view>
-        <view wx:if="{{address_id==0}}" class="dizhibox flex-row flex-center" bindtap="navigateto" id="/pages/addresslist/addresslist?chosetype=B&id={{tihuoren_id}}">
-            <view class="h5 txt-33">提货人</view>
-            <view class="flex-1"></view>
-            <view class="h5" style="color: #888;">{{addressthr.name}}{{addressthr.mobile}}</view>
-            <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
-        </view>
-        <view wx:else class="flex-row flex-center dizhibox" bindtap="navigateto" id='/pages/addresslist/addresslist?chosetype=B&id={{tihuoren_id}}'>
-                <view class="h5 txt-33">提货人</view>
-                <view class="flex-1"></view>
-            <view class="h5" style="color: #888;">{{addressthr.name}}{{addressthr.mobile}}</view>
-            <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
-        </view>
+  <!-- 自提 -->
+  <view wx:else>
+    <view wx:if="{{store_id==0}}" class="flex-row flex-center dizhibox" bindtap="navigateto" id='/pages/store/store?goodsid={{info[0].id}}&id={{store_id}}'>
+      <image src="{{uploadpath}}resource/{{res.dizhi}}" class="dizhi"></image>
+      <view class="f-36 txt-33">点击选择地址</view>
+      <view class="flex-1"></view>
+      <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
     </view>
+    <view wx:else class="flex-row flex-center dizhibox" bindtap="navigateto" id='/pages/store/store?goodsid={{info[0].id}}&id={{store_id}}'>
+      <view class="flex-1 ">
+        <view>
+          <view class="flex-row flex-center">
+            <view class="ziti">自提</view>
+            <view class="f-36 txt-33" style="font-weight: 500;">{{storeinfo.name}}</view>
+          </view>
 
-
-    <view class="goods">
-        <image src="{{uploadpath}}mall/{{info.cover}}" class="cover"></image>
-        <view class="height-50"></view>
-        <view class="flex-row flex-center" bindtap="navigateto" id="/pages/giftcardshiyong/giftcardshiyong?goodsid={{info.id}}">
-            <view class="h5 txt-33">礼品卡</view>
-            <view class="flex-1"></view>
-            <view wx:if="{{giftcardid > 0}}">
-                <view wx:if="{{lipin >0}}">
-                    -{{liping}}(余额:{{lipin}})
-                </view>
-                <view wx:else>
-                    -{{cardyue}}(余额:0)
-                </view>
-            </view>
-            <view wx:else class="flex-row flex-center">
-                <view class="h5" style="color:#888888;">未使用</view>
-                <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
-            </view>
-
+          <view class="flex-row flex-center">
+            <view class="txt-66 h5">{{storeinfo.address}}</view>
+          </view>
         </view>
-        <view class="height-50"></view>
-        <view class="flex-row flex-center" bindtap="navigateto" id="/pages/conponuse/conponuse?goodsid={{info.id}}&totalamount={{totalamount}}&couponid={{couponid}}">
-            <view class="h5 txt-33">优惠券</view>
-            <view class="cbox" style="background-image:url({{uploadpath}}resource/{{res.couponbgicon}})">{{keyongcoupon}}张可用</view>
-            <view class="flex-1"></view>
-            <view wx:if="{{couponid > 0}}"  class="flex-row flex-center">
-                <view >-{{couponprice}}</view>
-                <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
-            </view>
-            <view wx:else class="flex-row flex-center">
-                <view class="h5" style="color:#888888;">未使用</view>
-                <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
-            </view>
+      </view>
+      <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
+    </view>
+    <view wx:if="{{address_id==0}}" class="dizhibox flex-row flex-center" bindtap="navigateto" id="/pages/addresslist/addresslist?chosetype=B&id={{tihuoren_id}}">
+      <view class="h5 txt-33">提货人</view>
+      <view class="flex-1"></view>
+      <view class="h5" style="color: #888;">{{addressthr.name}}{{addressthr.mobile}}</view>
+      <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
+    </view>
+    <view wx:else class="flex-row flex-center dizhibox" bindtap="navigateto" id='/pages/addresslist/addresslist?chosetype=B&id={{tihuoren_id}}'>
+      <view class="h5 txt-33">提货人</view>
+      <view class="flex-1"></view>
+      <view class="h5" style="color: #888;">{{addressthr.name}}{{addressthr.mobile}}</view>
+      <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
+    </view>
+  </view>
 
+
+  <view class="goods">
+    <!-- <image src="{{uploadpath}}mall/{{info[0].cover}}" class="cover"></image> -->
+    <view class="main_box" wx:for="{{shopList}}" wx:key="{{item.id}}">
+      <view class="shop_car">
+        <!-- 图片-->
+        <view class="shop_car_img">
+          <image class="shop_car_imgs" src="{{uploadpath}}mall/{{item.shangpin[0].cover}}" mode="aspectFill" />
         </view>
+        <!-- 名称 -->
+        <view class="shop_car_name">
+          <view class="shop_car_ta">
+            {{item.shangpin[0].name}}
+          </view>
+          <view class="shop_car_tb">
+            {{item.guige[0].name}}
+          </view>
+        <view class="shop_car_tc">
+          <view class="shop_car_tc_left">
+            <view class="txt-c9 h6">￥</view>
+            <view class="txt-c9 ">{{item.guige[0].price}}</view>
+          </view>
+          <view class="num_btn_box">
+            x{{item.mall_number}}
+          </view>
+        </view>
+        </view>
+      </view>
+      
+    </view>
+     <view style="padding:10px;margin: 0 10px;">
+
+
+  
+      <view class="flex-row flex-center" bindtap="navigateto" id="/pages/giftcardshiyong/giftcardshiyong?goodsid={{info[0].id}}">
+        <view class="h5 txt-33">礼品卡</view>
+        <view class="flex-1"></view>
+        <view wx:if="{{giftcardid > 0}}">
+          <view wx:if="{{lipin >0}}">
+            -{{liping}}(余额:{{lipin}})
+          </view>
+          <view wx:else>
+            -{{cardyue}}(余额:0)
+          </view>
+        </view>
+        <view wx:else class="flex-row flex-center">
+          <view class="h5" style="color:#888888;">未使用</view>
+          <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
+        </view>
+
+      </view>
+      <view class="height-50"></view>
+      <view class="flex-row flex-center" bindtap="navigateto" id="/pages/conponuse/conponuse?goodsid={{info[0].id}}&totalamount={{totalamount}}&couponid={{couponid}}">
+        <view class="h5 txt-33">优惠券</view>
+        <view class="cbox" style="background-image:url({{uploadpath}}resource/{{res.couponbgicon}})">{{keyongcoupon}}张可用</view>
+        <view class="flex-1"></view>
+        <view wx:if="{{couponid > 0}}" class="flex-row flex-center">
+          <view>-{{couponprice}}</view>
+          <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
+        </view>
+        <view wx:else class="flex-row flex-center">
+          <view class="h5" style="color:#888888;">未使用</view>
+          <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
+        </view>
+
+      </view>
+    </view>
+  </view>
+  <view class="height-70"></view>
+  <view class="total">
+    <view class="flex-row flex-center">
+      <view class="h5 txt-33">商品金额</view>
+      <view class="flex-1"></view>
+      <view class="h5" style="color:#888888;">¥{{totalamount}}</view>
+    </view>
+    <view class="flex-row flex-center margin-top-24">
+      <view class="h5 txt-33">运费</view>
+      <view class="flex-1"></view>
+      <view class="h5 txt-fc " wx:if="{{sendtype=='B'}}">暂无</view>
+      <view class="h5 txt-fc " wx:else>¥{{yunfei}}</view>
+
+    </view>
+    <view class="flex-row flex-center margin-top-24">
+      <view class="h5 txt-33">优惠金额</view>
+      <view class="flex-1"></view>
+      <view class="h5 txt-fc ">¥{{youhui}}</view>
     </view>
     <view class="height-70"></view>
-    <view class="total">
-        <view class="flex-row flex-center">
-            <view class="h5 txt-33">商品金额</view>
-            <view class="flex-1"></view>
-            <view class="h5" style="color:#888888;">¥{{totalamount}}</view>
-        </view>
-        <view class="flex-row flex-center margin-top-24">
-            <view class="h5 txt-33">运费</view>
-            <view class="flex-1"></view>
-            <view class="h5 txt-fc " wx:if="{{sendtype=='B'}}">暂无</view>
-            <view class="h5 txt-fc " wx:else>¥{{yunfei}}</view>
-
-        </view>
-        <view class="flex-row flex-center margin-top-24">
-            <view class="h5 txt-33">优惠金额</view>
-            <view class="flex-1"></view>
-            <view class="h5 txt-fc ">¥{{youhui}}</view>
-        </view>
-        <view class="height-70"></view>
-        <view class="flex-row flex-center ">
-            <view class="h5 txt-33">订单备注</view>
-            <input type="text" class="flex-1 text-right h5 txt-33" value="{{beizhu}}" bindinput="beizhuFn" placeholder="请选择备注" />
-        </view>
+    <view class="flex-row flex-center ">
+      <view class="h5 txt-33">订单备注</view>
+      <input type="text" class="flex-1 text-right h5 txt-33" value="{{beizhu}}" bindinput="beizhuFn" placeholder="请选择备注" />
     </view>
+  </view>
 </view>
 
 <view class="flex-row flex-center fixbottom">
-    <view class=" h5 txt-33 margin-left-24">实付款:</view>
-    <view class="h4 txt-fc txt-bold margin-left-10">¥{{amount}}</view>
-    <view class="flex-1"></view>
-    <!-- {{flag}} -->
-    <view class="btns butcolor" bindtap="bindpay">立即支付</view>
+  <view class=" h5 txt-33 margin-left-24">实付款:</view>
+  <view class="h4 txt-fc txt-bold margin-left-10">¥{{amount}}</view>
+  <view class="flex-1"></view>
+  <!-- {{flag}} -->
+  <view class="btns butcolor" bindtap="bindpay">立即支付</view>
 </view>
