--- a/source/pages/ordersubmit/ordersubmit.wxss
+++ b/source/pages/ordersubmit/ordersubmit.wxss
@@ -1,4 +1,8 @@
 /* pages/ordersubmit/ordersubmit.wxss */
+page {
+    background-color: #F3F6F7;
+}
+
 .sendbox {
     width: 312rpx;
     height: 60rpx;
@@ -6,6 +10,7 @@
     border-radius: 30rpx;
     margin: 40rpx 24rpx;
 }
+
 .sendactive {
     width: 156rpx;
     height: 60rpx;
@@ -15,6 +20,7 @@
     text-align: center;
     color: #FFFFFF;
 }
+
 .txt-44 {
     width: 156rpx;
     height: 60rpx;
@@ -36,20 +42,29 @@
     height: 28rpx;
     margin-left: 16rpx;
 }
+
 .dizhibox {
     margin: 0 24rpx;
     padding: 60rpx 24rpx;
     background: #FFFFFF;
     border-radius: 20rpx;
 }
+
 .goods {
-    margin: 0 24rpx;
-    padding: 42rpx 24rpx;
+    /* margin: 0 24rpx;
+    padding: 42rpx 24rpx; */
+    margin-top: 15px;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
+
 .cover {
     width: 108rpx;
     height: 108rpx;
 }
+
 .cbox {
     width: 96rpx;
     height: 32rpx;
@@ -60,16 +75,22 @@
     line-height: 32rpx;
     text-align: center;
 }
+
 .total {
-    margin: 0 24rpx;
-    padding: 36rpx 24rpx 16rpx;
+    margin: 0 10px;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    padding: 13px;
 }
+
 .margin-top-24 {
     margin-top: 24rpx;
 }
+
 .txt-fc {
     color: #FC0000;
 }
+
 .fixbottom {
     width: 100vw;
     padding: 20rpx 0;
@@ -79,9 +100,11 @@
     left: 0;
     z-index: 10;
 }
+
 .margin-left-24 {
     margin-left: 24rpx;
 }
+
 .btns {
     width: 216rpx;
     height: 80rpx;
@@ -98,4 +121,88 @@
     color: #FFFFFF;
     font-size: 20rpx;
     margin-right: 8rpx;
+}
+
+.main_box {
+    width: 100%;
+
+
+
+    display: flex;
+    border-radius: 10px;
+
+    height: 128px;
+}
+
+.shop_car {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+}
+
+.shop_car_img {
+    width: 50%;
+    margin-left: 10px;
+}
+
+.shop_car_imgs {
+    width: 100%;
+    height: 110px
+}
+
+.shop_car_ta {
+    font-size: 16px;
+    font-family: PingFangSC-Semibold, PingFang SC;
+    font-weight: 600;
+    color: #454954;
+    line-height: 22px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.shop_car_tb {
+
+    width: 85px;
+    height: 17px;
+    font-size: 12px;
+    font-family: PingFangSC-Regular, PingFang SC;
+    font-weight: 400;
+    color: #999999;
+    line-height: 17px;
+    margin-bottom: 13px;
+}
+
+.shop_car_tc {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 14px;
+}
+
+.shop_car_name {
+    height: 80%;
+    margin: 0px 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.shop_car_tc_left {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.num_btn_box {
+    width: 30px;
+    height: 20px;
+    font-size: 14px;
+    font-family: PingFangSC-Regular, PingFang SC;
+    font-weight: 400;
+    color: #666666;
+    line-height: 20px;
 }
