--- a/source/pages/orderlist/orderlist.wxml
+++ b/source/pages/orderlist/orderlist.wxml
@@ -14,7 +14,17 @@
         <view wx:if="{{(item.sendtype=='B'&&item.orderstatus=='B')}}" class="h5 txt-44" bindtap="navigateto" id="/pages/orderdetail/orderdetail?id={{item.id}}">待取货</view>
         <view wx:else class="h5 txt-44" bindtap="navigateto" id="/pages/orderdetail/orderdetail?id={{item.id}}">{{item.orderstatus_name}}</view>
         <view class="flex-row flex-center margin-top-36" bindtap="navigateto" id="/pages/orderdetail/orderdetail?id={{item.id}}">
-            <image src="{{uploadpath}}mall/{{item.goods_cover}}" class="goods_img"></image>
+        <view class="image_boxs" wx:if="{{item.team.length > 0}}">
+            <view class="teamList" wx:for="{{item.team}}" wx:for-item="teamList" wx:key="index" >
+            <image  src="{{uploadpath}}mall/{{teamList.goods.cover}}" class="goods_img" ></image>
+            </view>
+        </view>
+        <view class="image_boxs" wx:else>
+          <view>
+            <image  src="{{uploadpath}}mall/{{item.goods_cover}}" class="goods_img" ></image>
+            </view>
+        </view>
+           
             <view class="flex-1"></view>
             <view class="txt-33 f-36">￥{{item.amount}}</view>
         </view>
