--- a/source/pages/orderlist/orderlist.wxml
+++ b/source/pages/orderlist/orderlist.wxml
@@ -1,67 +1,74 @@
 <view class="flex-row flex-center fixtop">
-    <view wx:for="{{typelist}}" wx:key='k' bindtap="switchtype" id="{{item.value}}" class="flex-1 flex-row flex-column">
-        <view class="h6  {{item.value==orderstatus?'txt-33 fw500':'txt-88'}}">{{item.name}}</view>
-        <view class="typeline {{item.value==orderstatus?'typelist_act':''}}"></view>
-    </view>
+  <view wx:for="{{typelist}}" wx:key='k' bindtap="switchtype" id="{{item.value}}" class="flex-1 flex-row flex-column">
+    <view class="h6  {{item.value==orderstatus?'txt-33 fw500':'txt-88'}}">{{item.name}}</view>
+    <view class="typeline {{item.value==orderstatus?'typelist_act':''}}"></view>
+  </view>
 </view>
 
 <view class="height-100"></view>
 <view class="flex-row kongbaitips min-height-90" wx:if="{{list.length<=0}}">
-    <image src="{{uploadpath}}resource/{{res.kongbaiyetubiao}}"></image>
+  <image src="{{uploadpath}}resource/{{res.kongbaiyetubiao}}"></image>
 </view>
 <view wx:else>
-    <view wx:for="{{list}}" wx:key='k' class="orderbox">
-        <view wx:if="{{(item.sendtype=='B'&&item.orderstatus=='B')}}" class="h5 txt-44" bindtap="navigateto" id="/pages/orderdetail/orderdetail?id={{item.id}}">待取货</view>
-        <view wx:else class="h5 txt-44" bindtap="navigateto" id="/pages/orderdetail/orderdetail?id={{item.id}}">{{item.orderstatus_name}}</view>
-        <view class="flex-row flex-center margin-top-36" bindtap="navigateto" id="/pages/orderdetail/orderdetail?id={{item.id}}">
-        <view class="image_boxs" wx:if="{{item.team.length > 0}}">
-            <view class="teamList" wx:for="{{item.team}}" wx:for-item="teamList" wx:key="index" >
-            <image  src="{{uploadpath}}mall/{{teamList.goods.cover}}" class="goods_img" ></image>
-            </view>
+  <view wx:for="{{list}}" wx:key='k' class="orderbox">
+    <view wx:if="{{(item.sendtype=='B'&&item.orderstatus=='B')}}" class="h5 txt-44" bindtap="navigateto" id="/pages/orderdetail/orderdetail?id={{item.id}}">待取货</view>
+    <view wx:else class="h5 txt-44" bindtap="navigateto" id="/pages/orderdetail/orderdetail?id={{item.id}}">{{item.orderstatus_name}}</view>
+    <view class="flex-row flex-center margin-top-36 image_mybox" bindtap="navigateto" id="/pages/orderdetail/orderdetail?id={{item.id}}">
+      <!-- 图片区域 -->
+      <view class="image_boxs" wx:if="{{item.team.goods.length > 0}}">
+        <view class="teamList" wx:for="{{item.team.goods}}" wx:for-item="teamList" wx:key="index" wx:if="{{index <2}}">
+          <image src="{{uploadpath}}mall/{{teamList.cover}}" class="goods_img"></image>
         </view>
-        <view class="image_boxs" wx:else>
-          <view>
-            <image  src="{{uploadpath}}mall/{{item.goods_cover}}" class="goods_img" ></image>
-            </view>
+
+        <view v-if="teamList.length > 2">
+          <view class="teamList1">
+            <image src="{{uploadpath}}mall/{{item.team.goods[2].cover}}" class="goods_img" />
+            <view wx:if="{{ item.team.goods.length > 2}}" class="txtmore">+{{item.team.goods.length -2}}</view>
+
+          </view>
         </view>
-           
-            <view class="flex-1"></view>
-            <view class="txt-33 f-36">￥{{item.amount}}</view>
+      </view>
+      <view class="image_boxs" wx:else>
+        <view>
+          <image src="{{uploadpath}}mall/{{item.goods_cover}}" class="goods_img"></image>
         </view>
-        <view class="flex-row flex-center margin-top-16" bindtap="navigateto" id="/pages/orderdetail/orderdetail?id={{item.id}}">
-            <view class="h7 txt-88">订单号：{{item.orderno}}</view>
-            <view class="flex-1"></view>
-            <view class="h7 txt-88">下单时间：{{item.submit_time}}</view>
-        </view>
-        <view class="flex-row flex-center margin-top-30" wx:if="{{item.orderstatus=='A'}}">
-            <view class="flex-1"></view>
-            <view class="cancelbtn" bindtap="cancelorder" id="{{item.id}}">取消订单</view>
-            <view class="paybtn margin-left-30" bindtap="navigateto" id="/pages/orderdetail/orderdetail?id={{item.id}}">去支付</view>
-        </view>
-        <view class="flex-row flex-center margin-top-30" wx:if="{{item.orderstatus=='B'}}">
-            <view class="flex-1"></view>
-            <view class="cancelbtn" bindtap="refundorder" id="{{item.id}}">取消订单</view>
-        </view>
-        <view class="flex-row flex-center margin-top-30" wx:if="{{item.orderstatus=='C'}}">
-            <view class="flex-1"></view>
-            <view class="cancelbtn" bindtap="shouhuo" id="{{item.id}}">已收到货</view>
-        </view>
-        <view class="flex-row flex-center margin-top-30" wx:if="{{item.orderstatus=='F' && item.ispingjia==''}}">
-            <view class="flex-1"></view>
-            <view class="cancelbtn" bindtap="navigateto" id="/pages/addpingjia/addpingjia?id={{item.id}}">去评价</view>
-        </view>
-        <view class="flex-row flex-center margin-top-30" wx:if="{{item.orderstatus=='Q'}}">
-            <view class="flex-1"></view>
-            <view class="cancelbtn" bindtap="shanchuorder" id="{{item.id}}">删除订单</view>
-        </view>
-        <view class="flex-row flex-center margin-top-30" wx:if="{{item.orderstatus=='R'}}">
-            <view class="flex-1"></view>
-            <view class="cancelbtn" bindtap="shanchuorder" id="{{item.id}}">删除订单</view>
-        </view>
-        <view class="flex-row flex-center margin-top-30" wx:if="{{item.orderstatus=='D'}}">
-            <view class="flex-1"></view>
-            <view class="cancelbtn" bindtap="quhuo" id="{{item.id}}">确认取货</view>
-        </view>
-        <!-- <button class="cancelbtn" bindtap="quhuo" id="{{item.id}}">确认取货</button> -->
+      </view>
+      <view class="txt-33 f-36">￥{{item.amount}}</view>
     </view>
+    <view class="flex-row flex-center margin-top-16" bindtap="navigateto" id="/pages/orderdetail/orderdetail?id={{item.id}}">
+      <view class="h7 txt-88">订单号：{{item.orderno}}</view>
+      <view class="flex-1"></view>
+      <view class="h7 txt-88">下单时间：{{item.submit_time}}</view>
+    </view>
+    <view class="flex-row flex-center margin-top-30" wx:if="{{item.orderstatus=='A'}}">
+      <view class="flex-1"></view>
+      <view class="cancelbtn" bindtap="cancelorder" id="{{item.id}}">取消订单</view>
+      <view class="paybtn margin-left-30" bindtap="navigateto" id="/pages/orderdetail/orderdetail?id={{item.id}}">去支付</view>
+    </view>
+    <view class="flex-row flex-center margin-top-30" wx:if="{{item.orderstatus=='B'}}">
+      <view class="flex-1"></view>
+      <view class="cancelbtn" bindtap="refundorder" id="{{item.id}}">取消订单</view>
+    </view>
+    <view class="flex-row flex-center margin-top-30" wx:if="{{item.orderstatus=='C'}}">
+      <view class="flex-1"></view>
+      <view class="cancelbtn" bindtap="shouhuo" id="{{item.id}}">已收到货</view>
+    </view>
+    <view class="flex-row flex-center margin-top-30" wx:if="{{item.orderstatus=='F' && item.ispingjia==''}}">
+      <view class="flex-1"></view>
+      <view class="cancelbtn" bindtap="navigateto" id="/pages/addpingjia/addpingjia?id={{item.id}}">去评价</view>
+    </view>
+    <view class="flex-row flex-center margin-top-30" wx:if="{{item.orderstatus=='Q'}}">
+      <view class="flex-1"></view>
+      <view class="cancelbtn" bindtap="shanchuorder" id="{{item.id}}">删除订单</view>
+    </view>
+    <view class="flex-row flex-center margin-top-30" wx:if="{{item.orderstatus=='R'}}">
+      <view class="flex-1"></view>
+      <view class="cancelbtn" bindtap="shanchuorder" id="{{item.id}}">删除订单</view>
+    </view>
+    <view class="flex-row flex-center margin-top-30" wx:if="{{item.orderstatus=='D'}}">
+      <view class="flex-1"></view>
+      <view class="cancelbtn" bindtap="quhuo" id="{{item.id}}">确认取货</view>
+    </view>
+    <!-- <button class="cancelbtn" bindtap="quhuo" id="{{item.id}}">确认取货</button> -->
+  </view>
 </view>
