--- a/source/pages/orderdetail/orderdetail.wxml
+++ b/source/pages/orderdetail/orderdetail.wxml
@@ -76,15 +76,56 @@
     </view>
 
     <view class="goods">
-          <view class="image_boxs" wx:if="{{info.team.length > 0}}">
+        <view class="image_boxs" wx:if="{{info.team.length > 0}}">
             <view class="teamList" wx:for="{{info.team}}" wx:for-item="teamList" wx:key="index" >
-            <image  src="{{uploadpath}}mall/{{teamList.goods.cover}}" class="goods_img" ></image>
+                <view>
+                <image  src="{{uploadpath}}mall/{{teamList.goods.cover}}" class="goods_img" bindtap="navigateto" id="/pages/malldetail/malldetail?id={{info.goods_id}}"></image>
+                </view>
+              <view class="shop_car_name">
+              <view class="shop_car_ta">
+                {{teamList.goods.name}}
+              </view>
+              <view class="shop_car_tb">
+                {{teamList.goods.guige.name}}
+              </view>
+              <view class="shop_car_tc">
+                <view class="shop_car_tc_left">
+                  <view class="txt-c9 h6">￥</view>
+                  <view class="txt-c9 h4">{{teamList.goods.guige.price}}</view>
+                </view>
+                <view class="shop_number">
+                    x{{teamList.num}}
+                </view>
+              </view>
             </view>
         </view>
+            
+            <!-- <image src="{{uploadpath}}mall/{{info.goods_cover}}" class="cover" bindtap="navigateto" id="/pages/malldetail/malldetail?id={{info.goods_id}}"></image> -->
+        </view>
         <view class="image_boxs" wx:else>
-          <view>
-            <image src="{{uploadpath}}mall/{{info.goods_cover}}" class="cover" bindtap="navigateto" id="/pages/malldetail/malldetail?id={{info.goods_id}}"></image>
+        <view class="teamList" hover-class="none" hover-stop-propagation="false">
+            
+             <view>
+              <image src="{{uploadpath}}mall/{{info.goods_cover}}" class="cover" bindtap="navigateto" id="/pages/malldetail/malldetail?id={{info.goods_id}}"></image>
             </view>
+             <view class="shop_car_name">
+              <view class="shop_car_ta">
+                {{info.goods_name}}
+              </view>
+              <view class="shop_car_tb">
+                {{teamList.goods.guige.name}}
+              </view>
+              <view class="shop_car_tc">
+                <view class="shop_car_tc_left">
+                  <view class="txt-c9 h6">￥</view>
+                  <view class="txt-c9 h4">{{info.price}}</view>
+                </view>
+                <view class="shop_number">
+                    x1
+                </view>
+              </view>
+            </view>
+        </view>
         </view>
 
         <view class="height-50"></view>
