--- a/source/pages/orderdetail/orderdetail.wxss
+++ b/source/pages/orderdetail/orderdetail.wxss
@@ -30,8 +30,9 @@
     border-radius: 12rpx;
 }
 .goods {
-    margin: 0 24rpx;
+    margin: 0 30rpx;
     display: flex;
+    flex-direction: column;
 }
 .cover {
     width: 108rpx;
@@ -48,8 +49,8 @@
     text-align: center;
 }
 .total {
-    margin: 0 24rpx;
-    padding: 36rpx 24rpx 16rpx;
+    margin: 0 30rpx;
+
 }
 .margin-top-24 {
     margin-top: 24rpx;
@@ -110,3 +111,61 @@
     margin-left: 32rpx;
     margin-right: 24rpx;
 }
+.image_boxs{
+    display: flex;
+    flex-direction: column;
+}
+.goods_img{
+    width: 144rpx;
+    height: 144rpx;
+}
+.teamList{
+    display: flex;
+    margin: 10px 0;
+}
+.shop_car_name {
+    height: 80%;
+    width: 70%;
+    margin-left: 20px;
+    display: flex;
+    flex-direction: column;
+    
+  }
+  
+  .shop_car_ta {
+    font-size: 14px;
+    font-family: PingFangSC-Semibold, PingFang SC;
+    font-weight: 600;
+    color: #454954;
+    line-height: 22px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  
+  .shop_car_tb {
+  
+    height: 24px;
+    
+    border-radius: 4px;
+    font-size: 14px;
+    font-family: PingFangSC-Regular, PingFang SC;
+    font-weight: 400;
+    color: #a8a4a4;
+   
+  }
+  
+  .shop_car_tc {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .shop_car_tc_left {
+    display: flex;
+    align-items: center;
+  }
+  .shop_number{
+    font-size: 14px;
+    color: #464040;
+  }
