--- a/source/pages/refundlist/refundlist.wxss
+++ b/source/pages/refundlist/refundlist.wxss
@@ -59,3 +59,34 @@
 .margin-top-16 {
     margin-top: 16rpx;
 }
+.image_boxs{
+    display: flex;
+}
+.image_mybox{
+    display: flex;
+    justify-content: space-between;
+}
+.teamList1{
+    /* display: flex;
+        flex-direction: column;
+        position: absolute;
+        text-align: center;
+        width: 215rpx;
+        height: 215rpx;
+        top: 26rpx;
+        right: 16rpx;
+        background-color: rgba(0, 0, 0, 0.5); */
+        position: relative;
+
+}
+.txtmore{
+    position: absolute;
+    top: 0px;
+    width: 144rpx;
+    height: 144rpx;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #ffffff;
+}
