--- a/source/pages/shopitem/shopitem.wxss
+++ b/source/pages/shopitem/shopitem.wxss
@@ -1,52 +1,16 @@
-/* pages/addpingjia/addpingjia.wxss */
+/* pages/shopitem/shopitem.wxss */
 page{
     background: #F3F6F7;
 }
-.cover {
-    width: 108rpx;
-    height: 108rpx;
+.boxs{
+    background-color: #FFFFFF;
+    margin: 10px;
+    height: 100%;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
 }
-
-.uploadimg {
-    width: 200rpx;
-    height: 200rpx;
-    margin-right: 20rpx;
-    margin-bottom: 20rpx;
-}
-
-.pore {
-    position: relative;
-}
-
-.shanchu {
-    width: 70rpx;
-    height: 70rpx;
-    position: absolute;
-    right: 0;
-    top: 0;
-    z-index: 5;
-}
-
-.fixbottom {
-    width: 100vw;
-    padding: 20rpx 0;
-    background: #FFFFFF;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    z-index: 10;
-}
-.btns {
-    width: 678rpx;
-    height: 92rpx;
-    /* background: #44B549; */
-    box-shadow: 0rpx 4rpx 16rpx 0rpx rgba(68,181,73,0.5);
-    border-radius: 48rpx;
-    line-height: 92rpx;
-    text-align: center;
-    color: #FFFFFF;
-}
-
 .image_boxs{
     display: flex;
 }
